--- a/admin/view/default/function/setfrom.html
+++ b/admin/view/default/function/setfrom.html
@@ -12,6 +12,9 @@
 			<tr><td >注册用户预存金额：</td>
 		        <td ><input name="reg_user_price" value="{{if $setting.reg_user_price}}{{$setting.reg_user_price/100}}{{else}}0{{/if}}"  size="10"/>&nbsp;元</td></tr> 
 		    
+		    <tr><td >试用天数：</td>
+		        <td ><input name="try_day" value="{{$setting.try_day}}"  size="10"/>&nbsp;天</td></tr> 
+		    
 		    <tr><td>模板目录:</td>
 				<td><select name='view_dir'>
 						{{for $i=0;$i<$view_dir_count;$i++}}
