fix renew.html is get_price

--- a/user/view/default/vhostproduct/renew.html
+++ b/user/view/default/vhostproduct/renew.html
@@ -7,6 +7,26 @@ function check_user()
 {
 	show('?c=product&a=check&product_type=vhost&param='+document.vhostform.param.value);
 }
+function get_price(month)
+{
+	var p = '{{$product.price/100/12}}' * month;
+	jQuery("#show_name").html("所需金额");
+	var url = '?c=user&a=getUserPrice';
+	jQuery.get(url,function(pp){
+		if (pp != 'error'){
+			if( pp/100 < p) {
+				//jQuery("#show_price").html('<font color=red>金额不够</font>');
+				alert('金额不够');
+			}else{
+				jQuery("#show_price").html(p.toFixed(2)+"元");
+			}
+			
+		}else{
+			jQuery("#show_price").html(p.toFixed(2)+"元");
+		}  
+	});
+}
+
 </script>
 
   <form name='vhostform' action="?c=product&a=renew&product_id={{$product.id}}&product_type=vhost&name={{$name}}" method="post">
@@ -15,35 +35,27 @@ function check_user()
 <div class="wid_ri r_mar" align="right">
 	<table id="table_ri" cellpadding="0" cellspacing="1">
 		<tr><td colspan="2">续费产品</td></tr>
-		<tr>
-			<td class="td_bgc right_2">用户名</td>
-			<td class="td_bgc right_2">{{$name}}</td>
-		</tr>
-		<tr>
-			<td class="td_bgc right_2">产品名称</td>
-			<td class="td_bgc right_2">{{$product.name}}</td>
-		</tr>
-		<tr>
-			<td class="td_bgc right_2">续费时间:</td>
+		
+		<tr><td class="td_bgc right_2">用户名</td>
+			<td class="td_bgc right_2">{{$name}}</td></tr>
+		
+		<tr><td class="td_bgc right_2">产品名称</td>
+			<td class="td_bgc right_2">{{$product.name}}</td></tr>
+		
+		<tr><td class="td_bgc right_2">续费时间:</td>
 			<td class="td_bgc right_2">
 				{{if $product.month_flag}}
-				<input type=radio name=month value='1' checked>1个月
+				<input type=radio name=month onclick='get_price(1);' value='1' checked>1个月
 				{{/if}}
-				<input type=radio name=month value=12 {{if !$product.month_flag}}checked{{/if}}>1年
-				<input type=radio name=month value=24>2年
-				<input type=radio name=month value=36>3年
-			</td>
-		</tr>	 
-		<tr>
-			<td class="td_bgc right_2">价格</td>
-			
-			<td class="td_bgc right_2">{{if $product.show_price==1}}{{substr($product.price/100/12,0,6)}}元/月{{else}}{{$product.price/100}}元/年{{/if}}</td>
-		</tr>
-		<tr>
-			<td class="td_bgc td_hg" colspan="2" align="center">
-			<input type="submit" value="确定">
-		</td>
-		</tr>
+				<input type=radio name=month onclick='get_price(12);' value=12 {{if !$product.month_flag}}checked{{/if}}>1年
+				<input type=radio name=month onclick='get_price(24);' value=24>2年
+				<input type=radio name=month onclick='get_price(36);' value=36>3年
+			</td></tr>	 
+		
+		<tr><td class="td_bgc right_2" id='show_name'>价格</td>
+			<td class="td_bgc right_2" id="show_price">{{if $product.show_price==1}}{{substr($product.price/100/12,0,6)}}元/月{{else}}{{$product.price/100}}元/年{{/if}}</td></tr>
+		
+		<tr><td class="td_bgc td_hg" colspan="2" align="center"><input type="submit" value="确定"></td></tr>
 	</table>
 	</div>
 </div>
