fix product.ctl.php is add getUpgradeprice

--- a/user/view/default/vhostproduct/upgrade.html
+++ b/user/view/default/vhostproduct/upgrade.html
@@ -12,8 +12,18 @@ function changeProduct()
 	var i = upgrade.product_id.selectedIndex;
 	$('web_quota').innerHTML=product[i][0]+"M";
 	$('db_quota').innerHTML = product[i][1] + "M";
-	$('price').innerHTML = product[i][2]/100 + '元/年';
+	var id = jQuery("#product_id").val();
+	var name = '{{$name}}';
+	var url = '?c=product&a=getUpgradePrice&id=' + id + '&name=' + name; 
+	jQuery.get(url,function(p){
+		jQuery("#show_name").html("所需金额");
+		$('price').innerHTML = p + '元';
+	});
+	
+	//$('price').innerHTML = product[i][2]/100 + '元/年';
 }
+
+
 </script>
 <div class="right" align="center">
 <form name='upgrade' action="?c=product&a=upgrade&name={{$name}}&product_type=vhost" method="post">
@@ -23,7 +33,7 @@ function changeProduct()
 	  <tr>
 		<td>升级到产品</td>
 		<td>
-		<select name='product_id' onChange='changeProduct()'>
+		<select name='product_id' onChange='changeProduct()' id='product_id'>
 		{{foreach from=$products item=product}}
 		<option value='{{$product.id}}'>{{$product.name}}</option>
 		{{/foreach}}
@@ -39,7 +49,7 @@ function changeProduct()
 		<td><div id='db_quota'></div></td>
 	  </tr>
 	  <tr>
-		<td>价格</td>
+		<td id='show_name'>价格</td>
 		<td><div id='price'></div></td>
 		</tr>
 		<tr>
