--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -1,13 +1,31 @@
-
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/left.css" type="text/css" media="all" />
 <link rel="stylesheet" rev="stylesheet" href="{{$STATIC}}style/public.css" type="text/css" media="all" />
+<style type='text/css'>
+.onMouseOver {
+	background-color:#CDCDC1;
+	font-size:16;
+}
+#masterdiv li {
+	padding-top:10px;
+}
+</style>
 <table cellpadding="0" cellspacing="0" class="lefttd">
-	<tr>
-		<td>
+	<tr><td>
 		<script type="text/javascript">
 		function SwitchMenu(obj,sty)
 		{
+			
 		}
+		jQuery(document).ready(function(){
+			jQuery("#masterdiv li").mouseover(function(){
+				jQuery(this).addClass('onMouseOver');
+			});
+			jQuery("#masterdiv li").mouseout(function(){
+				jQuery(this).removeClass('onMouseOver');
+		});
+			
+		});
+			
 		</script>
 		<div id="masterdiv">
 			<h1 id="m2" onClick="SwitchMenu('sub2','m2')" class="menu l_white">
