--- a/user/view/default/money/moneyout.html
+++ b/user/view/default/money/moneyout.html
@@ -19,18 +19,10 @@
 		共计{{$count}}记录
 	</div>
 	<table id="table_ri" cellpadding="0" cellspacing="1">
-		<tr>					
-			<td>消费金额(元)</td>
-			<td>消费时间</td>
-			<td>备注</td>					
-		</tr>
+		<tr><td>消费时间</td>	<td>消费金额(元)</td><td>备注</td></tr>
 			{{foreach from=$list item=row}}
-		<tr>
-			<td>{{$row.money/100}}元</td>
-			<td>{{$row.add_time}}</td>
-			<td>{{$row.mem}}</td>
-		</tr>
-		{{/foreach}}
+			<tr><td>{{$row.add_time}}</td><td>{{$row.money/100}}元</td><td>{{$row.mem}}</td></tr>
+			{{/foreach}}
   </table>
 </div>
 </div>
