--- a/user/view/default/host/left.html
+++ b/user/view/default/host/left.html
@@ -1,15 +1,13 @@
 <style type='text/css'>
 .public_left {
 	width:180px;
-	padding-left:10px;
 	font-weight:bold;
 	
 }
 .public_list {
 	height:30px;
 	font-size:16;
-	color:rgb(100,0,200);
-	background-color:#FFA500;
+	background-color:#FF8C69;
 	direction: ltr;
 	margin: 5px;
 	padding-top:5px;
