--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -1,5 +1,5 @@
 {{include file='common/head.html'}}
-<link rel="stylesheet" rev="stylesheet" href="../style/head.css" type="text/css" media="all" />
+<link rel="stylesheet" rev="stylesheet" href="style/head.css" type="text/css" media="all" />
 <style>
 /* 定义全局变量 */
 body {
