--- a/user/view/default/public/findpasswdfrom.html
+++ b/user/view/default/public/findpasswdfrom.html
@@ -21,3 +21,7 @@
 		<div class='find_text'><input type="submit"  value="密码找回"></div>
 	</form>
 </div>
+<script language='javascript'>
+reg.username.focus();
+
+</script>
