--- a/user/view/default/public/register_n.html
+++ b/user/view/default/public/register_n.html
@@ -68,6 +68,7 @@ function check_user()
 </div>
 
 <script language="javascript">
+reg.username.focus();
 function show(url) 
 { 
 	window.open(url,'','height=100,width=250,resize=no,scrollbars=no,toolsbar=no,top=200,left=200');
