--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -56,7 +56,7 @@ font-family: "宋体";
 <div class="wid_menu">
 	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login&refer=web" >
-		<tr><td colspan="2">
+		<tr><td colspan="2" class='product_list'>
 				{{if $role.user}}
 					{{$role.user}},您好!  [<a href='?c=user&a=index'>进入会员中心</a>] [<a href='?c=session&a=logout'>退出</a>]
 				{{else}}
