fix msg.html is big

--- a/user/view/default/msg.html
+++ b/user/view/default/msg.html
@@ -4,7 +4,7 @@
 		<table id="table_ri" cellpadding="0" cellspacing="1">
 		<tr>					
 			<td align="center">
-	 		<font color='red'><big>{{$msg}}</big></font>
+	 		<font color='red'><big><big>{{$msg}}</big></big></font>
 			</td>					
 		</tr>
 		</table>
